--- a/index.html
+++ b/index.html
@@ -4,100 +4,66 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Sled by sledjs</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link rel='stylesheet' href='https://npmcdn.com/sled@1.3.0/lib/sled.css'> </script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <style>
+      body {
+        background: teal;
+        height: 100vh;
+        margin: 0;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      h1, h2 {
+        color: #fff;
+      }
+
+      .sled {
+        width: 50%;
+        height: 50%;
+        border: .1em solid #fff;
+      }
+
+      .img {
+        background: coral;
+        width: 80%;
+        height: 80%;
+      }
+
+      .blue {
+        background: #09f;
+      }
+    </style>
   </head>
   <body>
-
-      <header>
-        <h1>Sled</h1>
-        <p>slide smooth like sled upon 45 degress hill</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/sledjs/sled" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/sledjs/sled/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/sledjs/sled/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h1>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>installation</h1>
-
-<h2>
-<a id="cdn" class="anchor" href="#cdn" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>cdn</h2>
-
-<h4>
-<a id="sledjs-and-sledcss" class="anchor" href="#sledjs-and-sledcss" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://npmcdn.com/sled/lib/sled.js">sled.js</a> and <a href="https://npmcdn.com/sled/lib/sled.css">sled.css</a>
-</h4>
-
-<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">link</span> <span class="pl-e">rel</span>=<span class="pl-s"><span class="pl-pds">'</span>stylesheet<span class="pl-pds">'</span></span> <span class="pl-e">href</span>=<span class="pl-s"><span class="pl-pds">'</span>https://npmcdn.com/sled/lib/sled.css<span class="pl-pds">'</span></span>&gt;
-&lt;<span class="pl-ent">script</span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>https://npmcdn.com/sled/lib/sled.js<span class="pl-pds">'</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;
-<span class="pl-s1">&lt;<span class="pl-ent">script</span>&gt;</span>
-<span class="pl-s1"></span>
-<span class="pl-s1"><span class="pl-k">let</span> slider <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Sled</span>($slider);</span>
-<span class="pl-s1"></span>
-<span class="pl-s1">&lt;/<span class="pl-ent">script</span>&gt;</span></pre></div>
-
-<h2>
-<a id="npm" class="anchor" href="#npm" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>npm</h2>
-
-<div class="highlight highlight-source-shell"><pre>$ npm i sled</pre></div>
-
-<div class="highlight highlight-source-js"><pre><span class="pl-k">const</span> <span class="pl-c1">Sled</span> <span class="pl-k">=</span> <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">'</span>sled<span class="pl-pds">'</span></span>);
-
-<span class="pl-k">let</span> slider <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Sled</span>($slider);</pre></div>
-
-<p>tested with webpack</p>
-
-<h2>
-<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>usage</h2>
-
-<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">'</span>sled<span class="pl-pds">'</span></span>&gt;
-  &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">'</span>slides<span class="pl-pds">'</span></span>&gt;
-
-    &lt;<span class="pl-ent">img</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">'</span>slide<span class="pl-pds">'</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>...<span class="pl-pds">'</span></span>&gt;
-    &lt;<span class="pl-ent">img</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">'</span>slide<span class="pl-pds">'</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>...<span class="pl-pds">'</span></span>&gt;
-    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">'</span>slide<span class="pl-pds">'</span></span>&gt;
-      &lt;<span class="pl-ent">img</span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>...<span class="pl-pds">'</span></span>&gt;
-    &lt;/<span class="pl-ent">div</span>&gt;
-    &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">'</span>slide<span class="pl-pds">'</span></span>&gt;
-      &lt;<span class="pl-ent">span</span>&gt; content &lt;/<span class="pl-ent">span</span>&gt;
-      &lt;<span class="pl-ent">img</span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>...<span class="pl-pds">'</span></span>&gt;
-    &lt;/<span class="pl-ent">div</span>&gt;
-
-  &lt;/<span class="pl-ent">div</span>&gt;
-&lt;/<span class="pl-ent">div</span>&gt;
-<span class="pl-s1">&lt;<span class="pl-ent">script</span>&gt;</span>
-<span class="pl-s1">  <span class="pl-k">let</span> $slider <span class="pl-k">=</span> <span class="pl-smi">document</span>.<span class="pl-en">querySelector</span>(<span class="pl-s"><span class="pl-pds">'</span>.sled<span class="pl-pds">'</span></span>);</span>
-<span class="pl-s1"></span>
-<span class="pl-s1">  <span class="pl-k">new</span> <span class="pl-en">Sled</span>($slider);</span>
-<span class="pl-s1">&lt;/<span class="pl-ent">script</span>&gt;</span></pre></div>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/sledjs">sledjs</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
+    <h1> Sled </h1>
+    <div class='sled' id='slider'>
+    <div class='slides simple'>
+      <div class='slide'> <span class='img'></span> </div>
+      <div class='slide'> <span class='img blue'></span> </div>
+      <div class='slide'> <span class='img '></span> </div>
+      <div class='slide'> <span class='img blue'></span> </div>
+      <div class='slide'> <span class='img '></span> </div>
+      <div class='slide'> <span class='img blue'></span> </div>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+  </div>
+    <h2> Use arrow keys </h2>
+  <script src='https://npmcdn.com/sled@1.3.0/lib/sled.js'> </script>
+  <script>
+    'use strict';
+
+    let $slider = document.getElementById('slider');
+
+    let slider = new Sled($slider);
+  </script>
+
   </body>
 </html>
