--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel='stylesheet' href='https://npmcdn.com/sled@1.3.0/lib/sled.css'> </script>
+    <link rel='stylesheet' href='https://npmcdn.com/sled/lib/sled.css'> </script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <style>
@@ -56,7 +56,7 @@
     </div>
   </div>
     <h2> Use arrow keys </h2>
-  <script src='https://npmcdn.com/sled@1.3.0/lib/sled.js'> </script>
+  <script src='https://npmcdn.com/sled/lib/sled.js'> </script>
   <script>
     'use strict';
 
