--- a/index.html
+++ b/index.html
@@ -29,17 +29,20 @@
       .sled {
         width: 50%;
         height: 50%;
-        border: .1em solid #fff;
+        border: solid #fff;
+        border-width: 0 .2em;
       }
 
       .img {
-        background: coral;
+        background: #fff;
         width: 80%;
         height: 80%;
       }
 
       .blue {
         background: #09f;
+        width: 95%;
+        height: 95%;
       }
     </style>
   </head>
