--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel='stylesheet' href='https://npmcdn.com/sled/lib/sled.css'> </script>
+    <link rel='stylesheet' href='https://npmcdn.com/sled/lib/sled.css'>
+    <link rel='stylesheet' href='https://npmcdn.com/@sled/dots/lib/dots.css'>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <style>
@@ -57,16 +58,18 @@
       <div class='slide'> <span class='img '></span> </div>
       <div class='slide'> <span class='img blue'></span> </div>
     </div>
+    <div class='dots'></div>
   </div>
     <h2> Use arrow keys </h2>
 
   <script src='https://npmcdn.com/sled/lib/sled.js'> </script>
   <script src='https://npmcdn.com/@sled/touch/lib/touch'> </script>
+  <script src='https://npmcdn.com/@sled/dots/lib/dots'> </script>
   <script>
     'use strict';
 
     let $slider = document.getElementById('slider');
-    let slider = new Sled($slider).loadModules(Touch);
+    let slider = new Sled($slider).loadModules(Touch, Dots);
   </script>
 
   </body>
